# FDMS

./: .gitignore  README.md
Prompts/: idea-development-agent.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_auth_foundation.py  0002_stored_files.py  0003_files_soft_delete.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  debug.py  files.py  health.py
backend/app/auth/: __init__.py  authorization.py  dependencies.py  jwt.py  principal.py  provisioning.py
backend/app/core/: __init__.py  config.py  context.py  database.py  errors.py  keyvault.py  logging.py  middleware.py  telemetry.py
backend/app/models/: __init__.py  base.py  file.py  role.py  tenant.py  user.py
backend/app/repositories/: __init__.py  file_repository.py
backend/app/schemas/: __init__.py  auth.py  error.py  files.py  health.py
backend/app/services/: __init__.py  blob_storage.py  file_service.py
backend/scripts/: build-and-push.sh  entrypoint.sh
backend/tests/: test_files.py
docs/: ACR-Deployment.md  ADRs.md  Architecture.md  Backend.md  Frontend-Architecture.md  PRD.md  SprintPlan.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/auth/: CurrentUserContext.tsx  ProtectedRoute.tsx  msal.ts  (+3 more)
infrastructure/: .env.example  docker-compose.yml
(+51 files in other folders)
